--- a/workshop/notebooks/run_prediction_from_czann.ipynb
+++ b/workshop/notebooks/run_prediction_from_czann.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Important\n",
+    "\n",
+    "**Please use Colab Runtime Version 25.07 --> Python 3.11.13**\n",
+    "\n",
+    "## Disclaimer\n",
+    "\n",
+    "This content of this repository is free to use for everybody. Carl Zeiss Microscopy GmbH's ZEN software undertakes no warranty concerning the use of those scripts, image analysis settings and ZEN experiments. Use them on your own risk.\n",
+    "\n",
+    "**By using any of those examples you agree to this disclaimer.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,7 +46,7 @@
     "    ! pip install --upgrade pip\n",
     "    ! pip install scikit-image xmltodict\n",
     "    ! pip install onnxruntime\n",
-    "    ! pip install czmodel[pytorch]"
+    "    ! pip install czmodel[pytorch]==5.1.0"
    ]
   },
   {
@@ -80,11 +95,11 @@
     "MASKS_FOLDER = \"nucleus_data/labels/\"\n",
     "\n",
     "# Path to the data on GitHub\n",
-    "GITHUB_IMAGES_PATH = \"https://github.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/blob/main/workshop/notebooks/nucleus_data.zip\"\n",
+    "GITHUB_IMAGES_PATH = \"https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/nucleus_data.zip\"\n",
     "\n",
     "# Path to the tools folder on Github\n",
     "modelname = \"cyto2022_nuc2.czann\"\n",
-    "CZANN_PATH = r\"https://github.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/blob/main/workshop/notebooks/models/\" + modelname\n",
+    "CZANN_PATH = r\"https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/models/\" + modelname\n",
     "\n",
     "czann_filepath = os.path.join(os.getcwd(), modelname)"
    ]
