--- a/workshop/notebooks/run_prediction_from_czann.ipynb
+++ b/workshop/notebooks/run_prediction_from_czann.ipynb
@@ -8,6 +8,8 @@
                 "\n",
                 "**Please use Colab Runtime Version 25.07 --> Python 3.11.13**\n",
                 "\n",
+                "We will soon release czmodel = 6.0.0,which will also support newer python versions.\n",
+                "\n",
                 "## Disclaimer\n",
                 "\n",
                 "This content of this repository is free to use for everybody. Carl Zeiss Microscopy GmbH's ZEN software undertakes no warranty concerning the use of those scripts, image analysis settings and ZEN experiments. Use them on your own risk.\n",
