--- a/workshop/notebooks/run_prediction_from_czann.ipynb
+++ b/workshop/notebooks/run_prediction_from_czann.ipynb
@@ -50,8 +50,8 @@
                 "    ! pip install --upgrade pip\n",
                 "    ! pip install scikit-image xmltodict\n",
                 "    ! pip install onnxruntime\n",
-                "    ! pip install czmodel[pytorch]==5.1.0\n",
-                "    ! pip install numpy>2"
+                "    ! pip install \"czmodel[pytorch]==5.1.0\"\n",
+                "    ! pip install \"numpy>2\""
             ]
         },
         {
