--- a/workshop/notebooks/SingleClassSemanticSegmentation_PyTorch.ipynb
+++ b/workshop/notebooks/SingleClassSemanticSegmentation_PyTorch.ipynb
@@ -56,23 +56,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "j5_xbvxuAsxV",
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# This can be used to switch on/off warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "warnings.simplefilter('ignore')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -509,7 +492,7 @@
     "    loss = train_one_epoch(epoch)\n",
     "    training_loss.append(loss)\n",
     "    \n",
-    "    # Print progress every 10 epochs\n",
+    "    # Print progress every ... epochs\n",
     "    if (epoch + 1) % 5 == 0 or epoch == 0:\n",
     "        print(f'Epoch {epoch+1:3d}/{NUM_EPOCHS}, Loss: {loss:.6f}')\n",
     "\n",
