--- a/workshop/notebooks/unpack_czann.ipynb
+++ b/workshop/notebooks/unpack_czann.ipynb
@@ -1,51 +1,75 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e405e362",
+   "metadata": {},
+   "source": [
+    "## Important\n",
+    "\n",
+    "**Please use Colab Runtime Version 25.07 --> Python 3.11.13**\n",
+    "\n",
+    "We will soon release czmodel = 6.0.0,which will also support newer python versions.\n",
+    "\n",
+    "## Disclaimer\n",
+    "\n",
+    "This content of this repository is free to use for everybody. Carl Zeiss Microscopy GmbH's ZEN software undertakes no warranty concerning the use of those scripts, image analysis settings and ZEN experiments. Use them on your own risk.\n",
+    "\n",
+    "**By using any of those examples you agree to this disclaimer.**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "17e5967a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  import google.colab\n",
+    "  IN_COLAB = True\n",
+    "except:\n",
+    "  IN_COLAB = False\n",
+    "\n",
+    "if IN_COLAB:\n",
+    "    # Install czmodel and dependencies\n",
+    "\n",
+    "    ! pip install --upgrade pip\n",
+    "    ! pip install scikit-image xmltodict\n",
+    "    ! pip install onnxruntime\n",
+    "    ! pip install \"czmodel[pytorch]==5.1.0\"\n",
+    "    ! pip install \"numpy>2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a800576d-4b58-4a6f-8ee0-1d3a8a701941",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from czmodel.pytorch.convert import DefaultConverter\n",
     "import tempfile\n",
-    "import onnxruntime as onnx_rt\n",
     "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c36de0c4-3492-4b02-9614-af2924f7aca5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model_path = \"model.czann\"\n",
-    "model_path = \"cyto2022_nuc2.czann\""
+    "# Path to the model\n",
+    "model_path = \"./models/cyto2022_nuc2.czann\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a23acebe-158a-4f44-a025-c390890b30c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model_type = ModelType.SINGLE_CLASS_SEMANTIC_SEGMENTATION\n",
-      "input_shape = [1024, 1024, 1]\n",
-      "output_shape = [1024, 1024, 2]\n",
-      "model_id = 30c3f719-a7ac-41a3-9204-b6a026ea5b5a\n",
-      "min_overlap = [128, 128]\n",
-      "classes = ['background', 'nuc']\n",
-      "model_name = APEER-trained model\n",
-      "scaling = None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extract the model information and path and to the prediction\n",
     "with tempfile.TemporaryDirectory() as temp_path:\n",
@@ -59,21 +83,13 @@
     "    for k,v in model_metadata_dict.items():\n",
     "        print(k, \"=\", v)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e194317b-5f9e-408f-9a9d-81a47eb727ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:czannseg]",
+   "display_name": "smartmic",
    "language": "python",
-   "name": "conda-env-czannseg-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -85,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
