--- a/workshop/notebooks/run_prediction_from_czann.ipynb
+++ b/workshop/notebooks/run_prediction_from_czann.ipynb
@@ -29,7 +29,15 @@
                 "  import google.colab\n",
                 "  IN_COLAB = True\n",
                 "except:\n",
-                "  IN_COLAB = False"
+                "  IN_COLAB = False\n",
+                "\n",
+                "import sys\n",
+                "\n",
+                "# Check if Python version is 3.11 for czmodel < 6\n",
+                "if sys.version_info.major == 3 and sys.version_info.minor == 11:\n",
+                "    print(\"Python version is 3.11\")\n",
+                "else:\n",
+                "    print(\"Python version is not 3.11\")"
             ]
         },
         {
@@ -231,8 +239,8 @@
                 "\n",
                 "    # create an ONNX session and get the input shape\n",
                 "    # use either \"CUDAExecutionProvider\" or \"CPUExecutionProvider\"]\n",
-                "    #sess = onnx_rt.InferenceSession(str(model_path), providers=[\"CPUExecutionProvider\"])\n",
-                "    sess = onnx_rt.InferenceSession(str(model_path), providers=[(\"CUDAExecutionProvider\", {\"cudnn_conv_algo_search\": \"DEFAULT\"})])"
+                "    sess = onnx_rt.InferenceSession(str(model_path), providers=[\"CPUExecutionProvider\"])\n",
+                "    #sess = onnx_rt.InferenceSession(str(model_path), providers=[(\"CUDAExecutionProvider\", {\"cudnn_conv_algo_search\": \"DEFAULT\"})])"
             ]
         },
         {
