--- a/workshop/notebooks/using_pylibCZIrw.ipynb
+++ b/workshop/notebooks/using_pylibCZIrw.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "martial-craps",
    "metadata": {
     "pycharm": {
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using: f:\\Documents\\miniconda3\\envs\\zen_python\\python.exe\n"
+      "Using: f:\\Documents\\anaconda3\\envs\\smartmic\\python.exe\n"
      ]
     }
    ],
@@ -94,7 +94,8 @@
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "import numpy as np\n",
-    "import os, sys\n",
+    "import os\n",
+    "import sys\n",
     "from tqdm import tqdm\n",
     "from tqdm.contrib import itertools as it\n",
     "from matplotlib.patches import Rectangle\n",
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "2a43afb5",
    "metadata": {
     "pycharm": {
@@ -132,7 +133,17 @@
     "INPUT_FOLDER = './data/'\n",
     "\n",
     "# Path to the data on GitHub\n",
-    "GITHUB_DATA_PATH = 'https://raw.githubusercontent.com/zeissmicroscopy/ZEN_Python_OAD_workshop/main/workshop/notebooks/data.zip'"
+    "GITHUB_DATA_PATH = 'https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/data.zip'\n",
+    "\n",
+    "# Define CZI locations\n",
+    "\n",
+    "czifile_DAPI_PGC = r\"https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/data/DAPI_PGC.czi\"\n",
+    "\n",
+    "czifile_5dstack = r\"https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/data/T%3D3_Z%3D5_CH%3D2_X%3D240_Y%3D170.czi\"\n",
+    "\n",
+    "czifile_scenes = r\"https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/data/w96_A1+BA2.czi\"\n",
+    "\n",
+    "czifile_timeseries = r\"https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/data/CellDivision_T%3D16_CH%3D2_ZSTD.czi\""
    ]
   },
   {
@@ -151,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "f03127af",
    "metadata": {
     "pycharm": {
@@ -183,13 +194,26 @@
    "id": "b25068ab",
    "metadata": {},
    "source": [
-    "## Opening a CZI (read-only)\n",
+    "### Opening a CZI (read-only)\n",
     "\n",
-    "A CZI file can be opened in a context manager.\n",
+    "A CZI file can be opened from disk in a context manager or alternatively it can also be opened directly from a seekable http url.\n",
     "\n",
-    "`with czi.open_czi(file_path) as czi:`\n",
+    "* `pyczi.ReaderFileInputTypes.Curl` reads from http\n",
+    "* * `pyczi.ReaderFileInputTypes.Standard` reads from file directly (default)\n",
     "\n",
-    "**This will open the CZI in read-only mode.**"
+    "```python\n",
+    "from pylibCZIrw import pyczi\n",
+    "\n",
+    "with czi.open_czi(file_path) as czi:\n",
+    "\n",
+    "    # add your code here\n",
+    "\n",
+    "with czi.open_czi(file_url, pyczi.ReaderFileInputTypes.Curl) as czi:\n",
+    "\n",
+    "    # add your code here\n",
+    "```\n",
+    "\n",
+    "Remark: Inside this notebook only the option to read from http is used which removes the need to download the data when using Colab notebooks."
    ]
   },
   {
@@ -209,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "urban-consumption",
    "metadata": {
     "pycharm": {
@@ -231,43 +255,45 @@
       "   <ExperimentBlockIndex>0</ExperimentBlockIndex>\n",
       "   <IsSegmented>false</IsSegmented>\n",
       "   <IsStandardMode>true</IsStandardMode>\n",
-      "   \n"
+      "   <ImageTransferMode>MemoryMappedAndFileStream</ImageTransferMode>\n",
+      "   <AutoSave IsActivated=\"false\" EnableSingleFileSave=\"false\">\n",
+      "    <StorageFolder>D:\\Users\\zeiss\\Pictures</StorageFolder>\n",
+      "    <Name>New</Name>\n",
+      "    <IsAutoSubFolder>true</IsAutoSubFolder>\n",
+      "    <IsAutoSubFolderExternal>true</IsAutoSubFolderExternal>\n",
+      "    <IsClosedOnCompletion>false</IsClosedOnCompletion>\n",
+      "    <SingleFileSaveFormat>JPG</SingleFileSaveFormat>\n",
+      "    <ConvertTo8Bit>false</ConvertTo8Bit>\n",
+      "    <AddXmlMetadata>false</Ad\n"
      ]
     }
    ],
    "source": [
-    "# define the filenames for the CZI images to be read\n",
-    "czifile_scenes = os.path.join(INPUT_FOLDER, r\"w96_A1+A2.czi\")\n",
-    "czifile_5dstack = os.path.join(INPUT_FOLDER, r\"T=3_Z=5_CH=2_X=240_Y=170.czi\")\n",
-    "\n",
     "# open the CZI for reading using a context manager (preferred way to do it)\n",
-    "with pyczi.open_czi(czifile_5dstack) as czidoc:\n",
+    "with pyczi.open_czi(czifile_5dstack, pyczi.ReaderFileInputTypes.Curl) as czidoc:\n",
     "    # get the raw metadata as XML\n",
-    "    md_xmlstring = czidoc.raw_metadata\n",
-    "    md_xmlroot = etree.fromstring(md_xmlstring)\n",
-    "\n",
-    "# just show some parts of the XML string\n",
-    "print(md_xmlstring[:510])"
+    "    md_xml = czidoc.raw_metadata\n",
+    "    print(md_xml[:1000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "d357f57a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment\n",
-      "HardwareSetting\n",
-      "CustomAttributes\n",
-      "Information\n",
-      "Scaling\n",
-      "DisplaySetting\n",
-      "Layers\n",
-      "Appliances\n"
+     "ename": "RuntimeError",
+     "evalue": "Error opening the file \"https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/data/w96_A1+BA2.czi\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# open the CZI for reading\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpyczi\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen_czi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mczifile_scenes\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mas\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mczidoc\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      3\u001b[39m \n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# get the raw metadata as a dictionary\u001b[39;49;00m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmd_dict\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mczidoc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmetadata\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# show the keys of the metadata dictionary\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mf:\\Documents\\anaconda3\\envs\\smartmic\\Lib\\contextlib.py:137\u001b[39m, in \u001b[36m_GeneratorContextManager.__enter__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    135\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[38;5;28mself\u001b[39m.args, \u001b[38;5;28mself\u001b[39m.kwds, \u001b[38;5;28mself\u001b[39m.func\n\u001b[32m    136\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m137\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28mself\u001b[39m.gen)\n\u001b[32m    138\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[32m    139\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mgenerator didn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt yield\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mf:\\Documents\\anaconda3\\envs\\smartmic\\Lib\\site-packages\\pylibCZIrw\\czi.py:1291\u001b[39m, in \u001b[36mopen_czi\u001b[39m\u001b[34m(filepath, file_input_type, cache_options)\u001b[39m\n\u001b[32m   1268\u001b[39m \u001b[38;5;129m@contextlib\u001b[39m.contextmanager\n\u001b[32m   1269\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mopen_czi\u001b[39m(\n\u001b[32m   1270\u001b[39m     filepath: \u001b[38;5;28mstr\u001b[39m,\n\u001b[32m   1271\u001b[39m     file_input_type: ReaderFileInputTypes = ReaderFileInputTypes.Standard,\n\u001b[32m   1272\u001b[39m     cache_options: Optional[CacheOptions] = \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   1273\u001b[39m ) -> Generator:\n\u001b[32m   1274\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Initialize a czi reader object and returns it.\u001b[39;00m\n\u001b[32m   1275\u001b[39m \u001b[33;03m    Opens the filepath and hands it over to the low-level function.\u001b[39;00m\n\u001b[32m   1276\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   1289\u001b[39m \u001b[33;03m        CziReader document as a czi object\u001b[39;00m\n\u001b[32m   1290\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1291\u001b[39m     reader = \u001b[43mCziReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfile_input_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcache_options\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcache_options\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1292\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m   1293\u001b[39m         \u001b[38;5;28;01myield\u001b[39;00m reader\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mf:\\Documents\\anaconda3\\envs\\smartmic\\Lib\\site-packages\\pylibCZIrw\\czi.py:180\u001b[39m, in \u001b[36mCziReader.__init__\u001b[39m\u001b[34m(self, filepath, file_input_type, cache_options)\u001b[39m\n\u001b[32m    177\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    178\u001b[39m     \u001b[38;5;66;03m# When reading from disk we only cache compressed subblocks.\u001b[39;00m\n\u001b[32m    179\u001b[39m     libczi_cache_options.cacheOnlyCompressed = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m180\u001b[39m     \u001b[38;5;28mself\u001b[39m._czi_reader = \u001b[43m_pylibCZIrw\u001b[49m\u001b[43m.\u001b[49m\u001b[43mczi_reader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlibczi_cache_options\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    181\u001b[39m \u001b[38;5;28mself\u001b[39m._stats = \u001b[38;5;28mself\u001b[39m._czi_reader.GetSubBlockStats()\n",
+      "\u001b[31mRuntimeError\u001b[39m: Error opening the file \"https://raw.githubusercontent.com/sebi06/ZEN_Python_CZI_Smart_Microscopy_Workshop/main/workshop/notebooks/data/w96_A1+BA2.czi\""
      ]
     }
    ],
@@ -1860,7 +1886,7 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('cyto2022')",
+   "display_name": "smartmic",
    "language": "python",
    "name": "python3"
   },
@@ -1874,12 +1900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "7019d285939b12df1a8a19088bce4b0ba11064da88178863e9101c39948d2ada"
-   }
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
