--- a/workshop/notebooks/using_pylibCZIrw.ipynb
+++ b/workshop/notebooks/using_pylibCZIrw.ipynb
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "7422d863",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "44ba6c63",
    "metadata": {
     "pycharm": {
@@ -1156,7 +1156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 76/76 [00:00<00:00, 1208.42it/s]\n"
+      "100%|██████████| 76/76 [00:00<00:00, 1208.49it/s]\n"
      ]
     }
    ],
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "d1e365db",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "af9d0d03",
    "metadata": {
     "pycharm": {
@@ -1234,7 +1234,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 976.01it/s]"
+      "100%|██████████| 5/5 [00:00<00:00, 905.47it/s]"
      ]
     },
     {
@@ -1242,10 +1242,10 @@
      "output_type": "stream",
      "text": [
       "z=0 array shape: (200, 225, 1) Min: 0 Max: 17289\n",
-      "z=1 array shape: (200, 225, 1) Min: 0 Max: 22384\n",
-      "z=2 array shape: (200, 225, 1) Min: 0 Max: 27878\n",
-      "z=3 array shape: (200, 225, 1) Min: 0 Max: 31223\n",
-      "z=4 array shape: (200, 225, 1) Min: 0 Max: 31023\n"
+      "z=10 array shape: (200, 225, 1) Min: 0 Max: 41722\n",
+      "z=20 array shape: (200, 225, 1) Min: 0 Max: 44834\n",
+      "z=30 array shape: (200, 225, 1) Min: 0 Max: 46484\n",
+      "z=40 array shape: (200, 225, 1) Min: 0 Max: 59865\n"
      ]
     },
     {
@@ -1282,12 +1282,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "74a8b9a3",
+   "id": "7b07260d",
    "metadata": {},
    "source": [
-    "<p><img src=\"screenshots/new_czi_locations.png\" title=\"new_czi_locations.czi - shown in ZEN blue\" width=\"1000\"></p>"
+    "<p><img src=\"screenshots/new_czi_locs.png\" title=\"new_czi_locations.czi - shown in ZEN blue\" width=\"1000\"></p>"
    ]
   },
   {
@@ -1304,16 +1303,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "5943b3a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c374920e5b484222b262ee6163428598",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# first step is to create some kind of grid of locations\n",
     "locx = []\n",
     "locy = []\n",
     "xystart = 0\n",
-    "offset = 700\n",
+    "offset = 300\n",
     "\n",
     "# create the list for the 4x4 grid locations for the 16 planes \n",
     "for x, y in it.product(range(4), range(4)):\n",
@@ -1324,31 +1338,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "286a855a",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16/16 [00:00<00:00, 1350.82it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# create the filename for the new CZI image file\n",
     "newczi_zscenes = os.path.join(os.getcwd(), \"newCZI_scenes.czi\")\n",
-    "ch = 1\n",
     "\n",
     "with pyczi.create_czi(newczi_zscenes, exist_ok=True) as czidoc_w:\n",
     "\n",
     "    # loop over all z-planes\n",
-    "    for z in tqdm(range(numZ)):\n",
+    "    for z in tqdm(range(16)):\n",
     "\n",
     "        # get the 2d array for the current plane and add axis to get (Y, X, 1) as shape\n",
-    "        array2d = data[z, ..., ch][..., np.newaxis]\n",
+    "        array2d = loaded_volume[z, ...][..., np.newaxis]\n",
     "\n",
     "        # for \"fun\" - write the z-planes to different locations using the locations we just created\n",
     "        czidoc_w.write(\n",
     "            data=array2d,\n",
-    "            plane={\"C\": ch},\n",
+    "            plane={\"C\": 0},\n",
     "            scene=z,\n",
     "            location=(locx[z], locy[z])\n",
     "        )"
@@ -1386,7 +1407,15 @@
    "execution_count": null,
    "id": "5a7e76d2-98af-47ef-9b8b-cb357a5912a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHAPE: (3000, 3000)\n"
+     ]
+    }
+   ],
    "source": [
     "# define the compression parameters\n",
     "\n",
@@ -1396,13 +1425,13 @@
     "cmp = \"zstd1:Preprocess=HiLoByteUnpack;Level=Best\"\n",
     "#cmp = \"zstd1:Preprocess=HiLoByteUnpack;ExplicitLevel=1\"\n",
     "\n",
-    "# getting the 2-d array from the kidney data.\n",
-    "array2d = data[0,...,1]"
+    "array2d = np.random.randint(low=1, high=1000, size=(3000, 3000)).astype(np.uint16)\n",
+    "print(f\"SHAPE: {array2d.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "9df34f48",
    "metadata": {},
    "outputs": [],
@@ -1434,10 +1463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "ace6e6f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size compressed   : 16390.90625 KB \n",
+      "Size uncompressed : 17580.3125 KB\n",
+      "Compression Ratio : 1.07\n"
+     ]
+    }
+   ],
    "source": [
     "size_comp = os.path.getsize(\"newCZI_compressed.czi\")/1024.0\n",
     "print(f\"Size compressed   : {size_comp} KB \")\n",
