--- a/workshop/notebooks/unpack_czann.ipynb
+++ b/workshop/notebooks/unpack_czann.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "17e5967a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a800576d-4b58-4a6f-8ee0-1d3a8a701941",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c36de0c4-3492-4b02-9614-af2924f7aca5",
    "metadata": {},
    "outputs": [],
@@ -66,10 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a23acebe-158a-4f44-a025-c390890b30c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model_type = ModelType.SINGLE_CLASS_SEMANTIC_SEGMENTATION\n",
+      "input_shape = [1024, 1024, 1]\n",
+      "output_shape = [1024, 1024, 2]\n",
+      "model_id = 30c3f719-a7ac-41a3-9204-b6a026ea5b5a\n",
+      "min_overlap = [128, 128]\n",
+      "classes = ['background', 'nuc']\n",
+      "model_name = APEER-trained model\n",
+      "scaling = None\n"
+     ]
+    }
+   ],
    "source": [
     "# extract the model information and path and to the prediction\n",
     "with tempfile.TemporaryDirectory() as temp_path:\n",
