--- a/workshop/notebooks/unpack_czann.ipynb
+++ b/workshop/notebooks/unpack_czann.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "17e5967a",
    "metadata": {},
    "outputs": [],
@@ -37,25 +37,25 @@
     "    ! pip install --upgrade pip\n",
     "    ! pip install scikit-image xmltodict\n",
     "    ! pip install onnxruntime\n",
-    "    ! pip install \"czmodel[pytorch]==5.1.0\"\n",
+    "    ! pip install \"czmodel\"\n",
     "    ! pip install \"numpy>2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a800576d-4b58-4a6f-8ee0-1d3a8a701941",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from czmodel.pytorch.convert import DefaultConverter\n",
+    "from czmodel.core.util._extract_model import extract_czann_model\n",
     "import tempfile\n",
     "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c36de0c4-3492-4b02-9614-af2924f7aca5",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a23acebe-158a-4f44-a025-c390890b30c3",
    "metadata": {},
    "outputs": [
@@ -90,8 +90,7 @@
     "with tempfile.TemporaryDirectory() as temp_path:\n",
     "\n",
     "    # get the model metadata and the path\n",
-    "    model_metadata, model_path = DefaultConverter().unpack_model(model_file=model_path,\n",
-    "                                                                 target_dir=Path(temp_path))\n",
+    "    model_metadata, model_path = extract_czann_model(path=model_path, target_dir=Path(temp_path))\n",
     "\n",
     "    # get model metadata as dictionary\n",
     "    model_metadata_dict = model_metadata._asdict()\n",
